--- a/Frontend/blog-single.html
+++ b/Frontend/blog-single.html
@@ -87,242 +87,20 @@
 		<th>Name</th>
 		<th>Location</th>
 		<th>Ranking</th>
-		<th>Institute Code</th>
-    	<th>Degree</th>
-		<th>Score</th>
+		<th>Degree Best</th>
+   	<th>Campus Size</th> 	
+		<th>Facilities Score</th>
+    <th>12th Requirement</th>
+    
 	</tr>
   <tr>
 		<td>SRM</td>
 		<td>CHENNAI</td>
 		<td>28</td>
-		<td>32RD</td>
-    <td>BTECH</td>
-		<td>45</td>  
-	</tr>
-
-  <tr>
-		<td>SRM</td>
-		<td>CHENNAI</td>
-		<td>28</td>
-		<td>32RD</td>
-    <td>BTECH</td>
-		<td>45</td>  
-	</tr>
-  <tr>
-		<td>SRM</td>
-		<td>CHENNAI</td>
-		<td>28</td>
-		<td>32RD</td>
-    <td>BTECH</td>
-		<td>45</td>  
-	</tr>
-  <tr>
-		<td>SRM</td>
-		<td>CHENNAI</td>
-		<td>28</td>
-		<td>32RD</td>
-    <td>BTECH</td>
-		<td>45</td>  
-	</tr>
-  <tr>
-		<td>SRM</td>
-		<td>CHENNAI</td>
-		<td>28</td>
-		<td>32RD</td>
-    <td>BTECH</td>
-		<td>45</td>  
-	</tr>
-  <tr>
-		<td>SRM</td>
-		<td>CHENNAI</td>
-		<td>28</td>
-		<td>32RD</td>
-    <td>BTECH</td>
-		<td>45</td>  
-	</tr>
-  <tr>
-		<td>SRM</td>
-		<td>CHENNAI</td>
-		<td>28</td>
-		<td>32RD</td>
-    <td>BTECH</td>
-		<td>45</td>  
-	</tr>
-  <tr>
-		<td>SRM</td>
-		<td>CHENNAI</td>
-		<td>28</td>
-		<td>32RD</td>
-    <td>BTECH</td>
-		<td>45</td>  
-	</tr>
-  <tr>
-		<td>SRM</td>
-		<td>CHENNAI</td>
-		<td>28</td>
-		<td>32RD</td>
-    <td>BTECH</td>
-		<td>45</td>  
-	</tr>
-  <tr>
-		<td>SRM</td>
-		<td>CHENNAI</td>
-		<td>28</td>
-		<td>32RD</td>
-    <td>BTECH</td>
-		<td>45</td>  
-	</tr>
-  <tr>
-		<td>SRM</td>
-		<td>CHENNAI</td>
-		<td>28</td>
-		<td>32RD</td>
-    <td>BTECH</td>
-		<td>45</td>  
-	</tr>
-  <tr>
-		<td>SRM</td>
-		<td>CHENNAI</td>
-		<td>28</td>
-		<td>32RD</td>
-    <td>BTECH</td>
-		<td>45</td>  
-	</tr>
-  <tr>
-		<td>SRM</td>
-		<td>CHENNAI</td>
-		<td>28</td>
-		<td>32RD</td>
-    <td>BTECH</td>
-		<td>45</td>  
-	</tr>
-  <tr>
-		<td>SRM</td>
-		<td>CHENNAI</td>
-		<td>28</td>
-		<td>32RD</td>
-    <td>BTECH</td>
-		<td>45</td>  
-	</tr>
-  <tr>
-		<td>SRM</td>
-		<td>CHENNAI</td>
-		<td>28</td>
-		<td>32RD</td>
-    <td>BTECH</td>
-		<td>45</td>  
-	</tr>
-  <tr>
-		<td>SRM</td>
-		<td>CHENNAI</td>
-		<td>28</td>
-		<td>32RD</td>
-    <td>BTECH</td>
-		<td>45</td>  
-	</tr>
-  <tr>
-		<td>SRM</td>
-		<td>CHENNAI</td>
-		<td>28</td>
-		<td>32RD</td>
-    <td>BTECH</td>
-		<td>45</td>  
-	</tr>
-  <tr>
-		<td>SRM</td>
-		<td>CHENNAI</td>
-		<td>28</td>
-		<td>32RD</td>
-    <td>BTECH</td>
-		<td>45</td>  
-	</tr>
-  <tr>
-		<td>SRM</td>
-		<td>CHENNAI</td>
-		<td>28</td>
-		<td>32RD</td>
-    <td>BTECH</td>
-		<td>45</td>  
-	</tr>
-  <tr>
-		<td>SRM</td>
-		<td>CHENNAI</td>
-		<td>28</td>
-		<td>32RD</td>
-    <td>BTECH</td>
-		<td>45</td>  
-	</tr>
-  <tr>
-		<td>SRM</td>
-		<td>CHENNAI</td>
-		<td>28</td>
-		<td>32RD</td>
-    <td>BTECH</td>
-		<td>45</td>  
-	</tr>
-  <tr>
-		<td>SRM</td>
-		<td>CHENNAI</td>
-		<td>28</td>
-		<td>32RD</td>
-    <td>BTECH</td>
-		<td>45</td>  
-	</tr>
-  <tr>
-		<td>SRM</td>
-		<td>CHENNAI</td>
-		<td>28</td>
-		<td>32RD</td>
-    <td>BTECH</td>
-		<td>45</td>  
-	</tr>
-  <tr>
-		<td>SRM</td>
-		<td>CHENNAI</td>
-		<td>28</td>
-		<td>32RD</td>
-    <td>BTECH</td>
-		<td>45</td>  
-	</tr>
-  <tr>
-		<td>SRM</td>
-		<td>CHENNAI</td>
-		<td>28</td>
-		<td>32RD</td>
-    <td>BTECH</td>
-		<td>45</td>  
-	</tr>
-  <tr>
-		<td>SRM</td>
-		<td>CHENNAI</td>
-		<td>28</td>
-		<td>32RD</td>
-    <td>BTECH</td>
-		<td>45</td>  
-	</tr>
-  <tr>
-		<td>SRM</td>
-		<td>CHENNAI</td>
-		<td>28</td>
-		<td>32RD</td>
-    <td>BTECH</td>
-		<td>45</td>  
-	</tr>
-  <tr>
-		<td>SRM</td>
-		<td>CHENNAI</td>
-		<td>28</td>
-		<td>32RD</td>
-    <td>BTECH</td>
-		<td>45</td>  
-	</tr>
-  <tr>
-		<td>SRM</td>
-		<td>CHENNAI</td>
-		<td>28</td>
-		<td>32RD</td>
-    <td>BTECH</td>
-		<td>45</td>  
+		<td>BTECH</td>
+    <td>20 acres</td>
+		<td>0</td>  
+    <td>75</td>  
 	</tr>
 
 
