--- a/Frontend/contact.html
+++ b/Frontend/contact.html
@@ -69,9 +69,9 @@
 
           <div class="col-lg-4 col-md-6">
             <div class="mb-3">
-              <label for="country" class="form-label fw-bolder text-muted">Email</label>
-              <input type="text" class="form-control py-3" id="country" aria-describedby="emailHelp"
-                placeholder="Email">
+              <label for="country" class="form-label fw-bolder text-muted">Phone</label>
+              <input type="number" class="form-control py-3" id="country" aria-describedby="emailHelp"
+                placeholder="Phone">
             </div>
           </div>
 
@@ -85,8 +85,8 @@
 
           <div class="col-lg-4 col-md-6">
             <div class="mb-3">
-              <label for="email" class="form-label fw-bolder text-muted">City</label>
-              <input type="email" class="form-control py-3" id="email" aria-describedby="emailHelp" placeholder="City">
+              <label for="email" class="form-label fw-bolder text-muted">Preferred Degree</label>
+              <input type="email" class="form-control py-3" id="email" aria-describedby="emailHelp" placeholder="Preferred Degree">
             </div>
           </div>
 
@@ -114,38 +114,6 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6">
-            <div class="mb-3">
-              <label for="age" class="form-label fw-bolder text-muted">PROPERTY 1</label>
-              <input type="text" class="form-control py-3" id="age" aria-describedby="emailHelp" placeholder="...">
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6">
-            <div class="mb-3">
-              <label for="age" class="form-label fw-bolder text-muted"> PROPERTY 2</label>
-              <input type="text" class="form-control py-3" id="age" aria-describedby="emailHelp" placeholder="...">
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6">
-            <div class="mb-3">
-              <label for="age" class="form-label fw-bolder text-muted">PROPERTY 3</label>
-              <input type="text" class="form-control py-3" id="age" aria-describedby="emailHelp" placeholder="...">
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 mb-2">
-
-            <div><label class="form-label fw-bolder text-muted">Gender</label></div>
-            <div class="form-check form-check-inline">
-              <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
-              <label class="form-check-label" for="inlineRadio1">Male</label>
-            </div>
-            <div class="form-check form-check-inline">
-              <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
-              <label class="form-check-label" for="inlineRadio2">Female</label>
-            </div>
-          </div>
           <div class="col-lg-4 col-md-6 offset-lg-4 offset-md-3">
             <button class="btn btn-info text-white w-100 mt-3 p-2" type="button" style="color: beige";>Search</button>
           </div>
