--- a/Frontend/contact.html
+++ b/Frontend/contact.html
@@ -115,7 +115,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 offset-lg-4 offset-md-3">
-            <button class="btn btn-info text-white w-100 mt-3 p-2" type="button" style="color: beige";>Search</button>
+            <a href="blog.html"><button class="btn btn-info text-white w-100 mt-3 p-2" type="button" style="color: beige";>Search</button></a> 
           </div>
 
         </form>
