--- a/Frontend/blog-single.html
+++ b/Frontend/blog-single.html
@@ -64,13 +64,13 @@
 		  <nav id="navbar" class="navbar">
 			<ul>
 			  <li><a class="active" href="index.html">Home</a></li>
-			  <li><a href="about.html">Log In</a></li>
+			  
 			
 			  
 	
 			
 	
-			  <li><a href="contact.html">Form</a></li>
+			  <li><a href="contact.html">Registration Form</a></li>
 			</ul>
 			<i class="bi bi-list mobile-nav-toggle"></i>
 		  </nav><!-- .navbar -->
