--- a/Frontend/blog-single.html
+++ b/Frontend/blog-single.html
@@ -2,116 +2,83 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+	<meta charset="utf-8">
+	<meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>StudEZ</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+	<title>StudEZ</title>
+	<meta content="" name="description">
+	<meta content="" name="keywords">
 
-  <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+	<!-- Favicons -->
+	<link href="assets/img/favicon.png" rel="icon">
+	<link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+	<!-- Google Fonts -->
+	<link
+		href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+		rel="stylesheet">
 
-  <!-- Vendor CSS Files -->
-  <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+	<!-- Vendor CSS Files -->
+	<link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
+	<link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+	<link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+	<link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+	<link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+	<link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
-  <!-- Template Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: Eterna
-  * Updated: Sep 18 2023 with Bootstrap v5.3.2
-  * Template URL: https://bootstrapmade.com/eterna-free-multipurpose-bootstrap-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+	<!-- Template Main CSS File -->
+	<link href="assets/css/style.css" rel="stylesheet">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 
 <body>
+
 	<section id="topbar" class="d-flex align-items-center">
 		<div class="container d-flex justify-content-center justify-content-md-between">
-		  <div class="contact-info d-flex align-items-center">
-			<i class="bi bi-envelope d-flex align-items-center"><a href="mailto:contact@example.com">contact@example.com</a></i>
-			<i class="bi bi-phone d-flex align-items-center ms-4"><span>+1 5589 55488 55</span></i>
-		  </div>
-		  <div class="social-links d-none d-md-flex align-items-center">
-			<a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-			<a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-			<a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-			<a href="#" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
-		  </div>
+			<div class="contact-info d-flex align-items-center">
+				<i class="bi bi-envelope d-flex align-items-center"><a
+						href="mailto:contact@example.com">contact@example.com</a></i>
+				<i class="bi bi-phone d-flex align-items-center ms-4"><span>+1 5589 55488 55</span></i>
+			</div>
+			<div class="social-links d-none d-md-flex align-items-center">
+				<a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
+				<a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
+				<a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+				<a href="#" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
+			</div>
 		</div>
-	  </section>
-	
-	  <!-- ======= Header ======= -->
-	  <header id="header" class="d-flex align-items-center">
+	</section>
+
+	<!-- ======= Header ======= -->
+	<header id="header" class="d-flex align-items-center">
 		<div class="container d-flex justify-content-between align-items-center">
-		  <div class="logo">
-			<h1><a href="index.html">StudEZ</a></h1>
-			<!-- Uncomment below if you prefer to use an image logo -->
-			<!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
-		  </div>
-	
-		  <nav id="navbar" class="navbar">
-			<ul>
-			  <li><a class="active" href="index.html">Home</a></li>
-			  <li><a href="about.html">Log In</a></li>
-			
-			  
-	
-			
-	
-			  <li><a href="contact.html">Form</a></li>
-			</ul>
-			<i class="bi bi-list mobile-nav-toggle"></i>
-		  </nav><!-- .navbar -->
-	
+			<div class="logo">
+				<h1><a href="index.html">StudEZ</a></h1>
+				<!-- Uncomment below if you prefer to use an image logo -->
+				<!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+			</div>
+
+			<nav id="navbar" class="navbar">
+				<ul>
+					<li><a class="active" href="index.html">Home</a></li>
+					<li><a href="about.html">Log In</a></li>
+					<li><a href="contact.html">Form</a></li>
+				</ul>
+				<i class="bi bi-list mobile-nav-toggle"></i>
+			</nav><!-- .navbar -->
+
 		</div>
-	  </header>
+	</header>
+	<script src="collegeList.js"></script>
+	<button type="button" class="btn btn-primary" id="btn" onclick="getUniInfo()">View list</button>
+	<h2>LIST OF COLLEGES </h2>
 
-  <div class="container">
-		<h2>LIST OF COLLEGES </h2>
+	<!--Important don't remove visible-sm-block visible-xs-block -->
+	<div class="row visible-sm-block visible-xs-block table-xs" style="width: 100%" id="universitiesTableDiv">
 
-<!--Important don't remove hidden-sm and xs -->
-<table class="table table-striped table-class hidden-sm hidden-xs" id= "table-id">
-	<tr>
-		<th>Name</th>
-		<th>Location</th>
-		<th>Ranking</th>
-		<th>Degree Best</th>
-   	<th>Campus Size</th> 	
-		<th>Facilities Score</th>
-    <th>12th Requirement</th>
-    
-	</tr>
-  <tr>
-		<td>SRM</td>
-		<td>CHENNAI</td>
-		<td>28</td>
-		<td>BTECH</td>
-    <td>20 acres</td>
-		<td>0</td>  
-    <td>75</td>  
-	</tr>
-
-
-</table>
-
-<!--Important don't remove visible-sm-block visible-xs-block -->
-<div class="row visible-sm-block visible-xs-block table-xs" style="width: 100% ;">
-	 
-</div>
-				<p> RANKED BY <a href="mailto:yasser.mas2@gmail.com" >StudEZ</a></p>
-</div> <!-- 		End of Container -->
+	</div>
+	<script src="collegeList.js"></script>
+	
 
 </body>
 
