--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -72,7 +72,7 @@
 
         
 
-          <li><a href="contact.html">Registration Form</a></li>
+          <li><a href="blog.html">STUDENT SUGGESTION</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -144,17 +144,17 @@
       <div class="container">
 
         <div class="row">
-          <div class="col-lg-4">
+          <!-- <div class="col-lg-4">
             <div class="icon-box">
               <i class="bi bi-card-checklist"></i>
               <h3><a href="contact.html">GET FORM</a></h3>
               <p>At StudEZ, we're here to assist you in finding the best options for your needs. Please fill out the following form to help us understand your requirements better.</p>
             </div>
-          </div>
+          </div> -->
           <div class="col-lg-4 mt-4 mt-lg-0">
             <div class="icon-box">
               <i class="bi bi-bar-chart"></i>
-              <h3><a href="">VIEW THE RANKING</a></h3>
+              <h3><a href="https://www.nirfindia.org/2023/Ranking.html">VIEW THE RANKING</a></h3>
               <p>These are the top ranked Institutions in India by NIRF</p>
             </div>
           </div>
@@ -165,7 +165,7 @@
               <p></p>
             </div>
           </div>
-        </div>
+        </div> 
 
       </div>
     </section><!-- End Featured Section -->
@@ -197,40 +197,6 @@
       </div>
     </section><!-- End About Section -->
 
-    <!-- ======= Services Section ======= -->
-    <section id="services" class="services">
-      <div class="container">
-
-        <div class="row">
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4><a href="">Find Colleges</a></h4>
-              <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bx-file"></i></div>
-              <h4><a href="">College Comparison</a></h4>
-              <p>LET US GUIDE YOU TO CHOOSE THE BEST SUITED COLLEGE FOR YOU<p>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4><a href="">Career Counselling</a></h4>
-              <p>Personalized guidance and support to help you navigate the ever-changing job market and make informed career decisions.</p>
-            </div>
-          </div>
-
-         
-        </div>
-
-      </div>
-    </section><!-- End Services Section -->
 
 
   </main><!-- End #main -->
