--- a/Frontend/contact.html
+++ b/Frontend/contact.html
@@ -77,14 +77,6 @@
 
           <div class="col-lg-4 col-md-6">
             <div class="mb-3">
-              <label for="age" class="form-label fw-bolder text-muted">Age</label>
-              <input type="text" class="form-control py-3" id="age" aria-describedby="emailHelp" placeholder="age">
-            </div>
-          </div>
-
-
-          <div class="col-lg-4 col-md-6">
-            <div class="mb-3">
               <label for="email" class="form-label fw-bolder text-muted">Preferred Degree</label>
               <input type="email" class="form-control py-3" id="email" aria-describedby="emailHelp" placeholder="Preferred Degree">
             </div>
@@ -115,7 +107,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 offset-lg-4 offset-md-3">
-            <a href="blog.html"><button class="btn btn-info text-white w-100 mt-3 p-2" type="button" style="color: beige";>Search</button></a> 
+            <a href="blog.html"><button class="btn btn-info text-white w-100 mt-3 p-2" type="button" style="color: beige";>Enter</button></a> 
           </div>
 
         </form>
